WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98608
Contiguous array allocation should always be inlined
https://bugs.webkit.org/show_bug.cgi?id=98608
Summary
Contiguous array allocation should always be inlined
Filip Pizlo
Reported
2012-10-06 17:43:55 PDT
Currently it's only inlined in the baseline JIT, which is unfortunate.
Attachments
the patch
(38.45 KB, patch)
2012-10-12 14:43 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-10-12 14:43:59 PDT
Created
attachment 168488
[details]
the patch
Filip Pizlo
Comment 2
2012-10-12 20:56:32 PDT
Landed in
http://trac.webkit.org/changeset/131249
Csaba Osztrogonác
Comment 3
2012-10-12 22:36:56 PDT
(In reply to
comment #2
)
> Landed in
http://trac.webkit.org/changeset/131249
It broke the 32 bit builds: /ramdisk/qt-linux-release/build/Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp: In member function 'void JSC::DFG::SpeculativeJIT::compile(JSC::DFG::Node&)': /ramdisk/qt-linux-release/build/Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp:3628: error: no matching function for call to 'JSC::DFG::SpeculativeJIT::emitAllocateBasicJSObject(JSC::AbstractMacroAssembler<JSC::X86Assembler>::TrustedImmPtr, JSC::DFG::GPRReg&, JSC::DFG::GPRReg&, JSC::DFG::GPRReg&, JSC::AbstractMacroAssembler<JSC::X86Assembler>::JumpList&)'[0m
Csaba Osztrogonác
Comment 4
2012-10-12 22:46:45 PDT
Fix landed in
http://trac.webkit.org/changeset/131251
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug